--- a/src/style.css
+++ b/src/style.css
@@ -1,31 +1,29 @@
 :root {
-  --background: #121212;
-  --background-alt: #181818;
-  --text-primary: #e0d7f5;
-  --text-secondary: #b0a6c9;
-  --primary: #ab47bc;
-  --primary-hover: #8e38a4;
-  --secondary: #c62828;
-  --secondary-hover: #a52020;
-  --neutral-light: #f5f5f5;
-  --neutral-dark: #2e2e2e;
+  --background: #121212; /* Fundo geral escuro */
+  --background-grid: #2e2e2e; /* Fundo dos cards e grids */
+  --text-primary: #d8d0f0; /* Texto principal lilás claro */
+  --heading-color: #a471b5; /* Cor dos títulos (h1, h2, h3) */
   --shadow: rgba(0, 0, 0, 0.5);
 }
 body {
   background: var(--background);
   color: var(--text-primary);
 }
+p {
+  line-height: 1.5;
+}
 
 .hero {
   max-width: 1200px;
   margin: 0 auto;
   background-image: linear-gradient(var(--shadow), var(--shadow)),
-    url("../images/band.webp");
+    url("../images/band-2.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
-  padding: 60px 0;
+  padding: 20px 0;
   border-radius: 10px;
+  height: 400px;
 }
 
 .container {
@@ -33,4 +31,89 @@ body {
   margin: 0 auto;
 }
 
-.description-grid;
+.description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding: 40px;
+}
+.description-card {
+  margin: 0px;
+  flex: 1;
+  width: 50%;
+}
+.description-card h2 {
+  text-align: center;
+  color: var(--heading-color);
+}
+.description-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 10px;
+  filter: brightness(70%);
+}
+.description-card a {
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #ab47bc;
+  color: #f5f5f5;
+}
+.description-card a:hover {
+  background-color: #8e38a4;
+}
+.btn-container {
+  display: block;
+  text-align: center;
+  margin-top: 40px;
+}
+.album {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  padding-top: 50px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.album-grid {
+  background-color: var(--background-grid);
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  border-radius: 10px;
+  min-height: 550px;
+  height: auto;
+  width: 300px;
+}
+
+.album-grid img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  border-radius: 10px;
+  filter: brightness(70%);
+  margin-bottom: 10px;
+}
+
+.album-grid h3 {
+  text-align: center;
+  color: var(--heading-color);
+  margin: 10px 0 5px;
+}
+
+.album-grid p {
+  flex-grow: 1;
+  text-align: center;
+  margin: 0 0 10px;
+  overflow: auto;
+}
+
+.album-grid iframe {
+  border-radius: 10px;
+  width: 100%;
+  height: 80px;
+  flex-shrink: 0;
+}
